Add Quake Sounds Plugin and update configuration files
- Introduced Quake Sounds Plugin for enhanced audio effects in CS2.
- Updated .gitignore to include plugin directories.
- Modified docker-compose.yml to mount addons and configs directories.
- Created PLUGINS.md for installation and configuration instructions.
- Added example configuration file for Quake Sounds.
- Implemented installation script for automatic setup of the plugin.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       - TV_DELAY=${TV_DELAY:-0}
     volumes:
       - cs2-data:/home/steam/cs2-dedicated
+      - ./addons:/home/steam/cs2-dedicated/game/csgo/addons
+      - ./configs:/home/steam/cs2-dedicated/game/csgo/cfg
     networks:
       - cs2-network
 
